--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,8 @@ flutter:
     - assets/fonts/
     - assets/icons/
     - assets/images/
-
+    - assets/images/poetry_card/
+    - assets/images/introduction_animation/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
