--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.5
   animations: ^2.0.8
+  image_gallery_saver: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
