--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,6 @@ flutter:
     - assets/images/
     - assets/images/poetry_card/
     - assets/images/make_tea_step/
-    - assets/images/introduction_animation/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -80,15 +79,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: HuangYou
+      fonts:
+        - asset: assets/fonts/ZhanKuQingKeHuangYouTi.ttf
+        # - asset: fonts/Schyler-Italic.ttf
+        #   style: italic
+    - family: JinShanCloud
+      fonts:
+        - asset: assets/fonts/KingsoftCloudFont.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
