--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^4.6.5
   animations: ^2.0.8
   image_gallery_saver: ^2.0.3
+  card_swiper: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -68,6 +69,7 @@ flutter:
     - assets/images/
     - assets/images/poetry_card/
     - assets/images/make_tea_step/
+    - assets/images/tea_appreciation/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
