✨ feat: 完成种类分布页面，新建茶叶介绍页面
导入六大茶类图片，基本实现分布种类页面，封装渐变背景组件，添加路由，更新导航栏

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/images/poetry_card/
     - assets/images/make_tea_step/
     - assets/images/tea_appreciation/
+    - assets/images/tea_species/
     - assets/images/nav/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
