--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,21 +68,14 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/images/brew_tea_step/
-    - assets/images/brew_tea_step/brew_tea_step_border.png
-    - assets/images/leading.png
     - assets/images/make_tea_step/
     - assets/images/nav/
-    - assets/images/nav_tree.png
     - assets/images/poetry_card/
     - assets/images/tea_appreciation/
     - assets/images/tea_culture_etiquette/
-    - assets/images/tea_culture_etiquette/bow_eq.png
-    - assets/images/tea_culture_etiquette/knock_eq.png
-    - assets/images/tea_culture_etiquette/meaning_eq.png
-    - assets/images/tea_culture_etiquette/palm_eq.png
     - assets/images/tea_history/
     - assets/images/tea_species/
-    - assets/images/teapot.png
+    - assets/images/tea_tech/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
