--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   animations: ^2.0.8
   image_gallery_saver: ^2.0.3
   card_swiper: ^3.0.1
+  dio: ^5.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
