--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_gallery_saver: ^2.0.3
   card_swiper: ^3.0.1
   dio: ^5.3.2
+  url_launcher: ^6.1.12
 
 
   # The following adds the Cupertino Icons font to your application.
