--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   card_swiper: ^3.0.1
   dio: ^5.3.2
   url_launcher: ^6.1.12
+  shared_preferences: ^2.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
